tests/repl/imports.check
scala> import scala.collection.mutable
import scala.collection.mutable
scala> val buf = mutable.ListBuffer[Int]()
buf: scala.collection.mutable.ListBuffer[Int] = ListBuffer()
scala> object o { val xs = List(1, 2, 3) }
defined module o
scala> import o._
import o._
scala> buf += xs
-- Error: <console> ------------------------------------------------------------
10:buf += xs
          ^^
          type mismatch:
          found:    scala.collection.immutable.List[Int](o.xs)
          required: String
-- Error: <console> ------------------------------------------------------------
10:buf += xs
   ^^^^^^^^^
   type mismatch:
   found:    String
   required: scala.collection.mutable.ListBuffer[Int]
scala> buf ++= xs
res1: scala.collection.mutable.ListBuffer[Int] = ListBuffer(1, 2, 3)
scala> :quit
